# black-fish

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.md  xz-sample.html
src/black_fish/: __init__.py  base_spider.py  config.py  executor.py
src/black_fish/spiders/: qianxin.py  tttang.py  xz.py
tests/: test_spider.py
